# plasmid

./: .editorconfig  .gitignore  Jenkinsfile  README.md  build.gradle  gradle.properties  settings.gradle
.github/workflows/: build.yml  check.yml  publish.yml  release.yml  staging.yml
doc/: network.md
plasmid-rs/: Cargo.toml
plasmid-rs/examples/: spleef.rs
plasmid-rs/src/: lib.rs
src/client/resources/: plasmid.client.mixins.json
src/main/java/net/gegy1000/plasmid/: Plasmid.java
src/main/java/net/gegy1000/plasmid/block/: CustomBlock.java
src/main/java/net/gegy1000/plasmid/command/: MapCommand.java  (+3 more)
src/main/java/xyz/nucleoid/plasmid/: Plasmid.java  PlasmidConfig.java  PlasmidWebServer.java
src/main/resources/: fabric.mod.json  plasmid.accesswidener  plasmid.mixins.json
src/main/resources/assets/plasmid/lang/: en_us.json
src/main/resources/data/plasmid/chat_type/: team_chat.json
src/main/resources/data/plasmid/dimension/: bubble_2.json
src/main/resources/data/plasmid/lang/: ca@valencia.json  ca_ES.json  ca_es.json  cs_CZ.json  cs_cz.json  de_DE.json  de_de.json  en_us.json  es_ES.json  es_cl.json  et_ee.json  fr_fr.json  nb_NO.json  nb_no.json  pr.json  pt_PT.json  pt_br.json  ru_RU.json  sv_SE.json
src/testmod/resources/: fabric.mod.json
src/testmod/resources/assets/testmod/: sounds.json
src/testmod/resources/data/testmod/game_portals/: legacy_menu.json  menu.json  nested_menu.json  portal.json  portal_c.json
src/testmod/resources/data/testmod/games/: jank.json  random.json  test.json
src/testmod/resources/data/testmod/lang/: en_us.json
(+915 files in other folders)
