[package]
name = "plasmid"
description = "Plasmid is a library for creating server-side minigames with Fabric and Rust."
version = "1.0.0"
edition = "2021"

[dependencies]
futures = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
glam = { version = "0.20", features = ["serde"] }
uuid = { version = "0.8", features = ["serde"] }
bytes = "1.0"
anyhow = "1"
